apps/production/client-sites/maria-elvira/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maria-elvira
  namespace: lulo-demo-landings
  labels:
    app: maria-elvira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maria-elvira
  template:
    metadata:
      labels:
        app: maria-elvira
        name: maria-elvira
    spec:
      containers:
      - name: maria-elvira
        image: "registry.yesidlopez.de/maria-elvira:v0.0.1" # {"$imagepolicy": "lulo-demo-landings:maria-elvira"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
