apps/production/client-sites/maria-elvira/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maria-elvira
  name: maria-elvira
  namespace: lulo-demo-landings
spec:
  selector:
    app: maria-elvira
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
